[gd_scene load_steps=2 format=3 uid="uid://dmdal0o381jm1"]

[ext_resource type="Script" path="res://project/10_title/Title.gd" id="1_rnp32"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rnp32")

[node name="select" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 150)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -228.0
offset_right = 125.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button1" type="Button" parent="select"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
text = "新しく始める"

[node name="Button2" type="Button" parent="select"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
text = "データをロードする"

[node name="Button3" type="Button" parent="select"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
text = "オプション"

[node name="Button4" type="Button" parent="select"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
text = "ゲームを終了する"
